--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<col style="background: #97DB9A"/>
 		<col style="background-color:#DCC48E; border:4px solid #C1437A;"/>
 		<col style="width: 42px" />
+		<col style="width: 42px" />
 	</colgroup>
 	<tr>
 		<td>&nbsp;</td>
